--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.uniquex.application</groupId>
-	<artifactId>assignment</artifactId>
-	<version>0.0.1</version>
-	<name>assignment</name>
+	<artifactId>uniquex-assignemnt</artifactId>
+	<version>1.0.0</version>
+	<name>assignemnt for uniquex</name>
 	<description>application to sort students by their performance.</description>
 	<properties>
 		<java.version>11</java.version>
